# dft-av-contracts

./: .gitattributes  .gitignore  .gitleaks.toml  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/adrs/: ADR-0001-doctype-slug-and-route-meta.md
docs/specs/: 2026-05-multi-doctype-ingest.md
python/dft_av_contracts/: __init__.py  _codegen_marker.py  _routes.py  bronze_asde_incident_push.py  bronze_bronze_asde_incident_push.py  bronze_bronze_ccav_kpi.py  bronze_bronze_ccav_tx_log.py  bronze_bronze_dvla_type_approval.py  bronze_bronze_dvla_vehicle_registry.py  bronze_bronze_dvsa_aps_perf.py  bronze_bronze_dvsa_fleet_audit.py  bronze_bronze_dvsa_permit_register.py  bronze_bronze_ismr_occurrences.py  bronze_ccav_kpi.py  bronze_ccav_tx_log.py  bronze_dvla_type_approval.py  bronze_dvla_vehicle_registry.py  bronze_dvsa_aps_perf.py  bronze_dvsa_fleet_audit.py  bronze_dvsa_permit_register.py  bronze_ismr_occurrences.py  source_bronze_asde_incident_push.py  source_bronze_dvsa_fleet_audit.py
schemas/: MANIFEST.yaml
schemas/bronze/: README.md  bronze-asde-incident-push-v1.yaml  bronze-ccav-kpi-v1.yaml  bronze-ccav-tx-log-v1.yaml  bronze-dvla-type-approval-v1.yaml  bronze-dvla-vehicle-registry-v1.yaml  bronze-dvsa-aps-perf-v1.yaml  bronze-dvsa-fleet-audit-v2.yaml  bronze-dvsa-permit-register-v1.yaml  bronze-ismr-occurrences-v1.yaml
schemas/json/: dvsa-aps-perf.schema.json  nuico-ccav-kpi.schema.json  si-inv.schema.json  (+1 more)
tools/: contract-diff.py  test_contract_diff.py
(+8 files in other folders)
